--- a/src/about.html
+++ b/src/about.html
@@ -14,7 +14,7 @@
     </script>
     <div class="mainContainer">
         <h1>About Vertisium</h1>
-        <img src="/images/vert app.png" height="300px" class="mainImage">
+        <img src="/images/vert_app.png" height="300px" class="mainImage">
         <p>
             Vertisium is an app about chatting new people from various places! It will support images, livechat, live
             videos, and so much more!
