--- a/src/contact.html
+++ b/src/contact.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="header.js">
+    <script src="./header.js">
     </script>
     <form class="formInput" id="contactForm" action="thanks.html">
         <h1>Contact!</h1>
