--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/src/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <script src="/src/header.js">
+    <script src="./header.js">
 
     </script>
 
@@ -17,8 +17,8 @@
         <h1>
             Vertisium
         </h1>
-        <img src="/images/vert_app.png" height="300px" class="image_show">
-        <script src="/src/index.js" type="module"></script>
+        <img src="../images/vert_app.png" height="300px" class="image_show">
+        <script src="./index.js" type="module"></script>
         <p>A cool chat app!</p>
         <a href="chat.html" class="gotoBtn">Chat</a>
     </div>
