--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <h1>
             Vertisium
         </h1>
-        <img src="../images/vert_app.png" height="300px" class="image_show">
+        <img src="./images/vert_app.png" height="300px" class="image_show">
         <script src="./index.js" type="module"></script>
         <p>A cool chat app!</p>
         <a href="chat.html" class="gotoBtn">Chat</a>
