--- a/src/thanks.html
+++ b/src/thanks.html
@@ -14,7 +14,7 @@
         <h1>
             Thanks!
         </h1>
-        <img src="/images/vert_app.png" height="300px" class="image_show">
+        <img src="./images/vert_app.png" height="300px" class="image_show">
 
         <p>Thank you for contacting me, your input will be appreciated!</p>
         <a href="contact.html" class="gotoBtn">Back</a>
