added manifest files in html, modified manifest name and desc, added styling to the offline page (pls work pls pls pls)

--- a/about.html
+++ b/about.html
@@ -32,6 +32,19 @@
             Vertisium is an app about chatting new people from various places! It will support images, livechat, live
             videos, and so much more!
         </p>
+        <h1>Progressive Web App</h1>
+        <img src="./images/PWA_Logo.png" height="300px" class="mainImage">
+        <p>Progressive Web App (PWA) is a type of web app that could be installed as it's own application.
+            PWA was introduced in 2016 and is supported by Chromium based web browsers such as Chrome, Brave, Opera,
+            ect.
+            PWA utilizes a powerful tool in java that is called service workers.
+        </p>
+        <p>
+            Service worker is a web enhancement tool that is often used to do custom request.
+            Service worker lifecycle starts by installing it, then activating it, and finally disposing it once it
+            became redundant.
+            Service worker is used to bridge communications between client-server and store the data in a cache.
+        </p>
     </div>
     <script src="./index.js" type="module"></script>
 </body>
