--- a/offline.html
+++ b/offline.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="manifest" href="manifest.json" />
 </head>
 
 <body>
-    <p>Yeah... You're offline sorry!</p>
+    <div class="mainContainer">
+        <h1>Yeah... You're offline sorry!</h1>
+    </div>
+
     <script>
         window.addEventListener('online', () => {
             window.location.href = "/index.html";
