fixed cache and install button hopefully

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="apple-touch-icon" href="images/icons/icon-512x512.png" />
     <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
     <meta name="theme-color" content="#db4938" />
-
+    <script src="/app.js"></script>
 </head>
 
 <body>
@@ -35,6 +35,7 @@
         <p>A cool chat app!</p>
         <a href="chat.html" class="gotoBtn">Chat</a>
     </div>
+
 </body>
 
 </html>
