--- a/not_online.html
+++ b/not_online.html
@@ -10,15 +10,15 @@
 </head>
 
 <body>
+    <script src="./header.js">
+
+    </script>
     <div class="mainContainer">
-        <h1>Yeah... You're offline sorry!</h1>
+        <h1>You are offline and can not access this feature.</h1>
     </div>
 
     <script>
-        window.addEventListener('online', () => {
-            window.location.href = "/index.html";
-            console.log("you are online!")
-        });
+
     </script>
 </body>
 
